[tool.poetry]
name = "aipe"
version = "0.1.0"
description = ""
authors = ["Claude Feldges <claude.feldges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-fasthtml = "^0.12.1"
python-frontmatter = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
